fix: spacing

--- a/src/styles/utils/_structures.scss
+++ b/src/styles/utils/_structures.scss
@@ -2,7 +2,7 @@
 
 .content-block {
 	max-width: 100vw;
-	margin: 3.5rem 1.5rem;
+	margin: 3.5rem 8%;
 }
 
 .card-container {
@@ -10,6 +10,7 @@
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	gap: 0.5rem;
+	margin-top: 3rem;
 
 	@media screen and (max-width: var.$screen-mobile) {
 		grid-template-columns: 1fr;
